tests/test_variable_state/bad/output/def_no_state.catala_en.Typecheck
[ERROR] This definition does not indicate which state is considered for variable foo.

  --> tests/test_variable_state/bad/def_no_state.catala_en
   |
10 |   definition foo equals 2
   |              ^^^
   + Test

Variable declaration:
 --> tests/test_variable_state/bad/def_no_state.catala_en
  |
5 |   output foo content integer
  |          ^^^
  + Test
